--- a/Santiago Zuluaga Guerrero/ciclo4UnabHotel/src/app/SantiagoZuluaga/registrar-reservas/registrar-reservas.component.html
+++ b/Santiago Zuluaga Guerrero/ciclo4UnabHotel/src/app/SantiagoZuluaga/registrar-reservas/registrar-reservas.component.html
@@ -32,7 +32,7 @@
         <br>
         <div id="div_left">
 
-            <div class="titulo-registrar">
+            <!-- <div class="titulo-registrar">
                 <form action="" method="post" class="reservas" name="formulario_reservas"
                     [formGroup]="datosFormularioReservas">
                     NOMBRE : <input type="text" name="nombre" formControlName="nombre" id="nombre" placeholder="Nombre">
@@ -49,46 +49,36 @@
 
                 </form>
 
-            </div>
+            </div> -->
 
         </div>
         <br>
         <br>
-        <div id="div_right">
-            <div id="calendario">
-                <div id="div_1" class="header-calendar">
-                    <div id="div_1" style="float: left; width: 10%;"><button (click)="changeMonth(-1)"
-                            class="btn-prev">Antes</button></div>
-                    <h4 style="width: 75%; float: left;">{{dateSelect | date:'MMMM, yyyy'}}</h4>
-                    <div id="div_1" style="float: left; width: 10%;">
-                        <button (click)="changeMonth(1)" class="btn-next">Siguiente</button>
-                    </div>
-                </div>
-                <br>
-                <br>
-                <ol class="header-calendar" style="border: 2px solid black;">
-                    <li *ngFor="let day of week" class="day-name">{{day | slice:0:3}}</li>
-                    <li (click)="clickDay(day)" [style.gridColumnStart]="first ? day?.indexWeek : 'auto'"
-                        *ngFor="let day of monthSelect; let first = first">
-                        <span>{{day?.value}}</span>
-                    </li>
+        <div id="div_right" style="margin: auto;">
+            <div class="input-group" style="text-align: center; margin: 0 auto;">
+            <div id="div_calendario" style="margin: auto;" class="input-group-prepend">
+                <label for="inicio" class="input-group-text">Fecha de llegada</label>
+                <input type="date" id="inicio" value="today" class="form-control">
+                <label for="salida" class="input-group-text">Fecha de Salida</label>
+                <input type="date" id="salida" class="form-control">
 
-                </ol>
             </div>
+        </div>
             <br>
-            <table style="margin: 0 auto;">
-                <td><b>¿Cuantos nos acompañan?</b> </td>
-                <td>Adultos <input type="number" min="0" step="1" value="0" style="margin: 1em; width: 5em;"></td>
-                <td>Niños <input type="number" min="0" step="1" value="0" style="width: 5em;"></td>
-            </table>
-
+            <label class="lead" for="" style="margin-bottom: 1em;"><b>¿Cuantos nos acompañan?</b> </label>
+            <br>
+            <div style="margin: auto;" class="input-group">
+                <table class="input-group-prepend" style="margin: 0 auto;">
+                
+                    <td><label class="input-group-text" for="">Adultos</label>  <input class="form-control" type="number" min="0" step="1" value="0" style="margin: 1em; width: 5em;"></td>
+                    <td><label class="input-group-text"  for="">Niños</label>  <input class="form-control" type="number" min="0" step="1" value="0" style="width: 5em;"></td>
+                </table>
+            </div>
         </div>
         <div id="div_btn">
             <button class="btn btn-outline-light" id="btn_cancelar">CANCELAR</button>
-            <button class="btn btn-outline-light" id="btn_siguiente" [routerLink]="['elegir_habitacion']">SIGUIENTE</button>
+            <button class="btn btn-outline-light" id="btn_siguiente" [routerLink]="['ElegirHabitacion']">SIGUIENTE</button>
         </div>
 
     </div>
-    <br>
-    <br>
 </div>
