--- a/Santiago Zuluaga Guerrero/ciclo4UnabHotel/src/app/SantiagoZuluaga/tus-reservas/tus-reservas.component.html
+++ b/Santiago Zuluaga Guerrero/ciclo4UnabHotel/src/app/SantiagoZuluaga/tus-reservas/tus-reservas.component.html
@@ -1,4 +1,4 @@
-<div id="div_cabeza" class="container">
+<div id="div_cabeza" >
     <!-- <div id="div_encabezado" style="float: left; width: 20%; align-content: left; height: 100%;">
         <button (click)="changeMonth(1)" class="btn-reservas">Realizar Reserva</button>
         <br>
@@ -32,9 +32,9 @@
         <br>
         <div id="div_left">
 
-            <div class="titulo-registrar">
+            <div class="table-striped">
                 <table id="tusreservas">
-                    <tr>
+                    <tr style="padding: 1em;"> 
                         <th>Nombre</th>
                         <th>Fecha</th>
                         <th>Numero de Personas</th>
