--- a/Luis_Felipe_Mejia_Sanchez/src/app/app.component.html
+++ b/Luis_Felipe_Mejia_Sanchez/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-menu></app-menu>
+
+<app-horizontal-nav-bar></app-horizontal-nav-bar>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
